docs: user-guide - newbie traps (QT_QPA_PLATFORM_PLUGIN_PATH required, --enable-native-access on Java 26, chcp 65001 for CJK)